Fundamentals of Magento 2 Development v. 2.1 Exercise Solutions task 3.8.2

--- a/app/code/Training/Render/view/frontend/layout/default.xml
+++ b/app/code/Training/Render/view/frontend/layout/default.xml
@@ -7,5 +7,10 @@
                    name="training.example.first"
                    template="Training_Render::first.phtml"/>
         </referenceContainer>
+        <referenceBlock name="page.main.title">
+            <action method="setPageTitle">
+                <argument translate="true" name="title" xsi:type="string">Custom page tittle</argument>
+            </action>
+        </referenceBlock>
     </body>
 </page>
