--- a/app/code/Training/Render/view/frontend/templates/first.phtml
+++ b/app/code/Training/Render/view/frontend/templates/first.phtml
@@ -1,12 +1,6 @@
 <?php /** @var Magento\Framework\View\TemplateEngine\Php $this */ ?>
 <div>
-    <div style="background-color: <?php echo $this->getData('background_color') ?>;
-            margin: 10px;
-            padding: 30px;
-            border: #d3d3d3 2px dotted;
-            border-radius: 20px;
-            text-align: center;
-            ">
+    <div style="background-color: <?php echo $this->getData('background_color') ?>;">
         <h2><?php echo __('The first custom block') ?></h2>
     </div>
 </div>
