Fundamentals of Magento 2 Development v. 2.1 Exercise Solutions task 3.8.7

--- a/app/code/Training/Render/view/frontend/layout/default.xml
+++ b/app/code/Training/Render/view/frontend/layout/default.xml
@@ -16,5 +16,13 @@
                 <argument translate="true" name="title" xsi:type="string">Custom page tittle</argument>
             </action>
         </referenceBlock>
+        <referenceBlock name="header.links">
+            <block class="Magento\Framework\View\Element\Html\Link" name="example.link" after="-">
+                <arguments>
+                    <argument name="label" xsi:type="string" translate="false">Example Page</argument>
+                    <argument name="path" xsi:type="string">render/layout/onecolumn</argument>
+                </arguments>
+            </block>
+        </referenceBlock>
     </body>
 </page>
