--- a/app/code/Training/Attributes/view/frontend/templates/print_attributes.phtml
+++ b/app/code/Training/Attributes/view/frontend/templates/print_attributes.phtml
@@ -1,7 +1,7 @@
 <script type="text/x-magento-init">
   {
     "#product-attribute-specs-table": {
-      "Training_Attributes/js/print-attributes.js": {}
+      "Training_Attributes/js/print-attributes": {}
     }
   }
 </script>
