grid - 200 actions links issue

--- a/app/code/Training/Contacts/view/adminhtml/layout/contacts_contacts_edit.xml
+++ b/app/code/Training/Contacts/view/adminhtml/layout/contacts_contacts_edit.xml
@@ -3,7 +3,7 @@
     <update handle="styles"/>
     <body>
         <referenceContainer name="content">
-            <uiComponent name="contacts_contacts_listing"/>
+            <uiComponent name="contacts_form"/>
         </referenceContainer>
     </body>
 </page>
