--- a/app/code/Training/Contacts/view/adminhtml/layout/contacts_contacts_index.xml
+++ b/app/code/Training/Contacts/view/adminhtml/layout/contacts_contacts_index.xml
@@ -3,7 +3,7 @@
     <update handle="styles"/>
     <body>
         <referenceContainer name="content">
-            <uiComponent name="contacts_contacts_form"/>
+            <uiComponent name="contacts_listing"/>
         </referenceContainer>
     </body>
 </page>
